--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.titan-one-regular {
+  font-family: "Titan One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .noUi-horizontal {
   height: 10px;
 }
