styling, content card

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   height: 10px;
 }
 .noUi-target {
-  background: #f4f4f5;
+  background: #fafafa;
   border-radius: 5px;
   border: 1px solid #d4d4d8;
   box-shadow: none;
