--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,13 @@
   box-shadow: none;
 }
 .noUi-connect {
-  background: #50d862;
+  background: #8aeb96;
+  box-shadow: inset 0 1px 2px 0 rgb(0 0 0 / 0.25);
 }
 .noUi-handle {
   border: 1px solid #28bf3c;
   border-radius: 12px;
-  background: #1ead31;
+  background: #50d862;
   cursor: default;
   box-shadow: none;
 }
