--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,78 @@
 .noUi-handle:before {
   display: none;
 }
+
+/**
+ * loader sourced from https://codepen.io/nzbin/pen/GGrXbp
+ * ==============================================
+ * Experimental: Gooey Effect
+ * Dot Hourglass
+ * ==============================================
+ */
+.dot-hourglass {
+  position: relative;
+  top: -15px;
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  background-color: hsl(0deg, 100%, 0%);
+  color: transparent;
+  margin: -1px 0;
+  transform-origin: 5px 20px;
+  animation: dot-hourglass 2.4s infinite ease-in-out;
+  animation-delay: 0.6s;
+}
+.dot-hourglass::before,
+.dot-hourglass::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  background-color: hsl(0deg, 100%, 0%);
+  color: transparent;
+}
+.dot-hourglass::before {
+  top: 30px;
+}
+.dot-hourglass::after {
+  animation: dot-hourglass-after 2.4s infinite cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+
+@keyframes dot-hourglass {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  25% {
+    transform: rotateZ(180deg);
+  }
+  50% {
+    transform: rotateZ(180deg);
+  }
+  75% {
+    transform: rotateZ(360deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+@keyframes dot-hourglass-after {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(30px);
+  }
+  50% {
+    transform: translateY(30px);
+  }
+  75% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
