--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,26 @@
   display: none;
 }
 
+/** TRANSITIONS **/
+.zoom-enter {
+  transform: scale(0.9);
+  opacity: 0;
+}
+.zoom-enter-active {
+  transform: scale(1);
+  opacity: 1;
+  transition: transform 300ms, opacity 300ms;
+}
+.zoom-exit {
+  transform: scale(1);
+  opacity: 1;
+}
+.zoom-exit-active {
+  transform: scale(0.9);
+  opacity: 0;
+  transition: transform 300ms, opacity 300ms;
+}
+
 /**
  * loader sourced from https://codepen.io/nzbin/pen/GGrXbp
  * ==============================================
