--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,16 @@
   border: 1px solid #d4d4d8;
   box-shadow: none;
 }
+.dark .noUi-target {
+  background: #18181b;
+  border: 1px solid #09090b;
+}
 .noUi-connect {
   background: #8aeb96;
   box-shadow: inset 0 1px 2px 0 rgb(0 0 0 / 0.25);
+}
+.dark .noUi-connect {
+  background: #16511f;
 }
 .noUi-handle {
   border: 1px solid #28bf3c;
